--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,9 @@ header a {
   height: 150px;
   margin: 20px auto 0;
   border-radius: 25px;
-  position: relative;
+  position: absolute;
+  top: 80px;
+  left: 10%;
 }
 
 #hero-section p {
