--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Bangers&display=swap');
 
 /* remove default styles added by the browser to all elements */
 * {
@@ -175,4 +175,11 @@ header a {
 
 #main-links .right a p {
   text-align: right;
+}
+
+.testimonial {
+  margin-top: 20px;
+  width: 80%;
+  text-align: center;
+  font-family: 'Amatic SC', sans-serif ;
 }
