tidy indentation and styling on index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,14 +159,12 @@ header a {
   align-items: center;
 }
 
-#main-links div a p{
-  text-decoration: none;
-  padding: 5px;
-  color: white;
+#index-body div a p:hover {
+  color: rgb(255, 192, 203);
 }
 
-#main-links div a p:hover {
-  color: rgb(255, 192, 203);
+#main-links .right a p {
+  text-align: right;
 }
 
 .rounded-logo {
@@ -176,10 +174,6 @@ header a {
   font-size: 150%;
   background-color: white;
   color: rgb(255, 192, 203);
-}
-
-#main-links .right a p {
-  text-align: right;
 }
 
 .testimonial {
