--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,10 +205,14 @@ header a {
 
 /* Styles for big landscape tablets, laptops, and desktops */
 @media (min-width: 1025px) {
-  
+  #hero-section {
+    width: 60%;
+    left: 20%;
+  }
+
 }
 
 /* Styles for high-resolution laptops and desktops */
 @media (min-width: 1281px) {
-  
+
 }
