--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,6 +186,13 @@ header a {
 }
 
 /* help page styling */
+main-help {
+  margin: 100px 0 50px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .overlay-text {
   position: absolute;
   top: 60%;
