--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -201,11 +201,20 @@ main-help {
 }
 
 .accreditation {
-  display: flex;
+  width: 90%;
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
-  border: 2px solid rgb(255, 255, 255);
-  margin: 20px 0 20px 0;
+  border: 2px solid rgb(255, 192, 203);
+  margin-bottom: 20px;
+  font-size: small;
+  text-align: center;
+}
+
+.accreditation-img {
+  display: flex;
+  justify-content: center;
+  border-bottom-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 main-help section img {
