--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,11 +191,12 @@ main-help {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .help-block {
   width: 80%;
-  display: flex;
+  text-align: center;
   font-size: 80%;
   margin-bottom: 20px;
 }
