--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,12 +192,12 @@ main-help {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  font-size: smaller;
 }
 
 .help-block {
   width: 80%;
   text-align: center;
-  font-size: 80%;
   margin-bottom: 20px;
 }
 
@@ -207,7 +207,6 @@ main-help {
   border-top-right-radius: 15px;
   border: 2px solid rgb(255, 192, 203);
   margin-bottom: 20px;
-  font-size: small;
   text-align: center;
 }
 
