--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ i {
 }
 
 .testimonial {
-  margin-top: 20px;
+  margin: 0 auto;
   width: 80%;
   font-size: large;
   text-align: center;
@@ -186,23 +186,20 @@ header a {
 }
 
 /* help page styling */
-main-help {
+main {
+  width:80%;
+  align-self: center;
   margin: 100px 0 50px 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   text-align: center;
   font-size: smaller;
 }
 
 .help-block {
-  width: 80%;
   text-align: center;
   margin-bottom: 20px;
 }
 
 .accreditation {
-  width: 90%;
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
   border: 2px solid rgb(255, 192, 203);
@@ -210,16 +207,14 @@ main-help {
   text-align: center;
 }
 
-.accreditation-img {
-  display: flex;
-  justify-content: center;
-  border-bottom-left-radius: 15px;
-  border-top-right-radius: 15px;
+.accreditation-img img {
+  width: 60px;
+  height: 60px;
 }
 
-main-help section img {
-  height: 75px;
-  width: 75px;
+div img {
+  height: 90px;
+  width: 90px;
   border-bottom-left-radius: 15px;
   border-top-right-radius: 15px;
   padding: 10px;
