--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ i {
 }
 
 .testimonial {
-  margin: 0 auto;
+  margin: 20px auto;
   width: 80%;
   font-size: large;
   text-align: center;
@@ -145,7 +145,7 @@ header a {
   background-repeat: no-repeat;
   background-size: cover;
   width: 80%;
-  height: 125px;
+  height: 115px;
   margin: 20px auto 0;
   border-radius: 25px;
   position: absolute;
@@ -162,7 +162,7 @@ header a {
   letter-spacing: 0.1em;
   font-family: 'Oswald', sans-serif;
   text-shadow: -1px -1px 0 rgb(255, 192, 203), 1px -1px 0 rgb(255, 192, 203), -1px 1px 0 rgb(255, 192, 203), 1px 1px 0 rgb(255, 192, 203);
-  height: 125px;
+  height: 115px;
   border-radius: 25px;
   background-color: rgb(255, 192, 203, 0.6);
   padding: 10px;
@@ -244,7 +244,7 @@ div img {
   }
 
   #index-body {
-    margin-top: 60px;
+    margin-top: 80px;
   }
 
   .accreditation {
@@ -261,14 +261,14 @@ div img {
   }
 
   #index-body {
-    margin-top: 90px;
+    margin-top: 100px;
   }
 
   .testimonial {
     width: 30%;
   }
 
-  main {
+  #main-help {
     width:50%;
     margin: 120px 0 50px 0;
   }
