add container styling to css for booking

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,6 +221,12 @@ div img {
   margin-top: 10px;
 }
 
+/* booking page styling */
+.container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px; /* gap between rows */
+}
 
 
 
