--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@ i {
   padding: 0.5em 0.5em;
 }
 
+.heading-sm {
+  background-color: rgb(255, 192, 203, 0.7);
+  border-bottom-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border: 2px solid rgb(255, 255, 255);
+}
 
 .rounded-logo {
   border-top-right-radius: 15px;
