--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -267,6 +267,14 @@ div img {
   margin: 20px 0 20px 0;
 }
 /*================================================================*/
+/* about me page styling */
+#main-about {
+  width: 80%;
+  align-self: center;
+  text-align: center;
+  margin: 80px 0 50px 0;
+}
+/*================================================================*/
 /* Styles for portrait tablets, portrait iPad, e-readers, landscape 800x480 phones */
 @media (min-width: 600px) {
   .testimonial {
