--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,12 @@ div img {
   text-align: center;
   margin: 80px 0 50px 0;
 }
+
+.profile-pic {
+  width: 125px;
+  height: 187.5px;
+  border-radius: 40%;
+}
 /*================================================================*/
 /* Styles for portrait tablets, portrait iPad, e-readers, landscape 800x480 phones */
 @media (min-width: 600px) {
