--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -280,6 +280,12 @@ div img {
   height: 187.5px;
   border-radius: 40%;
 }
+
+.profile-pic-active {
+  width: 303px;
+  height: 100px;
+  border-radius: 25px;
+}
 /*================================================================*/
 /* Styles for portrait tablets, portrait iPad, e-readers, landscape 800x480 phones */
 @media (min-width: 600px) {
