--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -323,7 +323,7 @@ div img {
   }
 
   #main-book {
-    margin-top: 110px;
+    margin-top: 120px;
   }
 
   #featured {
@@ -332,6 +332,11 @@ div img {
 
   .heading-sm {
     width: 300px;
+  }
+
+  #main-about {
+    width: 70%;
+    margin: 120px 0 50px 0;
   }
 }
 
@@ -378,5 +383,24 @@ div img {
   .container {
     display: inline-block;
   }
+  #main-about {
+    width: 50%;
+  }
 
+  .profile-pic {
+    width: 200px;
+    height: 300px;
+    border-radius: 40%;
+  }
+
+  .profile-pic-active {
+    width: 606px;
+    height: 200px;
+    border-radius: 50%;
+  }
+  
+  .profile-pic-steps {
+    width: 200px;
+    height: 200px;
+  }
 }
