--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,16 +279,19 @@ div img {
   width: 125px;
   height: 187.5px;
   border-radius: 40%;
+  border: 2px solid rgb(255, 255, 255);
 }
 
 .profile-pic-active {
   width: 303px;
   height: 100px;
   border-radius: 50%;
+  border: 2px solid rgb(255, 255, 255);
 }
 
 .profile-pic-steps {
   border-radius: 50%;
+  border: 2px solid rgb(255, 255, 255);
 }
 /*================================================================*/
 /* contact me page styling */
@@ -303,6 +306,7 @@ div img {
   width: 150px;
   height: 150px;
   border-radius: 30%;
+  border: 2px solid rgb(255, 255, 255);
 }
 
 /*================================================================*/
