--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,7 @@ div img {
   border-top-right-radius: 15px;
   padding: 10px;
   margin-top: 10px;
+  border: 2px solid rgb(255, 255, 255);
 }
 /*================================================================*/
 /* booking page styling */
