--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -300,7 +300,7 @@ div img {
   width: 80%;
   align-self: center;
   text-align: center;
-  margin: 80px 0 50px 0;
+  margin: 100px 0 50px 0;
 }
 
 .contact-pic {
@@ -324,7 +324,7 @@ div img {
   margin: auto;
   color: rgb(70, 22, 154);
   font-size: larger;
-  font-weight: 800;
+  font-weight: 700;
   border: 2px solid rgb(255, 255, 255);
   letter-spacing: 2px;
   margin-top: 20px;
@@ -361,6 +361,10 @@ label {
   padding-left: 50px;
 }
 
+input[type="radio"] {
+  height: 25px;
+  width: 25px;
+}
 
 /*================================================================*/
 /* Styles for portrait tablets, portrait iPad, e-readers, landscape 800x480 phones */
