--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,6 +357,7 @@ label {
 }
 
 .radio {
+  margin: auto;
   text-align: left;
   padding-left: 50px;
 }
@@ -414,6 +415,11 @@ input[type="radio"] {
     width: 70%;
     margin: 120px 0 50px 0;
   }
+}
+
+#main-contact {
+  width: 80%;
+  margin: 120px 0 50px 0;
 }
 
 /* Styles for big landscape tablets, laptops, and desktops */
