resize google maps for different media sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -457,6 +457,10 @@ margin-bottom: 50px;
     margin-top: 120px;
   }
 
+  iframe {
+    width: 60%;
+
+    }
 }
 
 /* Styles for high-resolution laptops and desktops */
