--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,10 @@ div img {
   margin: 100px 0 50px 0 ;
 }
 
+#contact-mid {
+  margin: 0px 50px 0 50px;
+}
+
 .contact-pic {
   width: 125px;
   height: 125px;
@@ -384,8 +388,6 @@ margin-bottom: 50px;
 .sidebar {
   display: none;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   margin: auto;
   margin-top: 100px;
 }
@@ -445,6 +447,7 @@ margin-bottom: 50px;
 
 #main-contact {
   width: 80%;
+  justify-content: center;
   margin: 120px 0 50px 0;
   font-size: large;
 }
@@ -543,6 +546,9 @@ margin-bottom: 50px;
   
   .sidebar {
      display: flex;
+     height: 450px;
+     width: auto;
+     margin: 100px  50px 0 50px;
   }
 
 }
