--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,6 +244,14 @@ div img {
   margin: auto;
   margin-top: 100px;
   margin-bottom: 50px;
+  background-image: url('/assets/images/background2.webp');
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 2px solid rgb(255,255,255);
+  color: rgb(70, 22, 154);
+  border-bottom-left-radius: 25px;
+  border-top-right-radius: 25px;
+  padding: 10px;
 }
 
 .container {
