--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,13 +74,6 @@ i {
   color: rgb(255, 255, 255);
 }
 
-.button {
-  padding: 15px;
-  border-radius: 50%;
-  background-color: rgb(255, 192, 203);
-  color: rgb(70, 22, 154);
-  border: 1px solid rgb(255, 255, 255);
-}
 /*================================================================*/
 /* footer styling */
 footer {
@@ -267,21 +260,38 @@ div img {
 }
 
 .block {
+  display: flex;
+  flex-direction: column;
   padding: 10px;
   text-align: center;
   flex: 1; /* distribute available space evenly */
   border: 2px solid rgb(255, 192, 203);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
+}
 
+.button {
+  padding: 15px;
+  border-radius: 15px;
+  background-color: rgb(255, 192, 203);
+  color: rgb(70, 22, 154);
+  border: 1px solid rgb(255, 255, 255);
+}
+
+.button:hover {
+  color: rgb(255, 192, 203);
+  background-color: rgb(70, 22, 154);
 }
 
 #featured {
+  display: flex;
+  flex-direction: column;
   border: 2px solid rgb(255, 192, 203);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
   width: 60%;
   margin: auto;
+  padding: 10px;
 }
 
 .booking-info {
