--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,7 @@ div img {
   border: 2px solid rgb(255, 192, 203);
   border-bottom-left-radius: 25px;
   border-top-right-radius: 25px;
+  margin-bottom: 10px;
 }
 
 .button {
